2014-10-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/filesys.c (filesys_read_info_file): Disable call to 
	convert_eols.
	* info/info-utils.c (printed_representation): Make '\r' bytes 
	followed by a '\n' invisible.
	* info/Makefile.am: t/cr-tag-table.sh removed from XFAIL_TESTS.
	
	* info/info-utils.c (forward_to_info_syntax): Check for syntax 
	case-insensitively.

2014-10-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (forward_to_info_syntax): New function.
	(scan_node_contents): Call it instead of using regexp_search.  
	This produces a speed improvement, noticable when using M-x 
	index-apropos or opening a long index node.
	* info/indices.c (info_indices_of_file_buffer): Call strstr 
	instead of string_in_line.

	* info/filesys.c (convert_eols): Don't convert nulls in Info 
	tags into spaces any more.
	* info/indices.c (info_index_apropos, info_virtual_index),
	* info/session.c (allfiles_create_node): Add index tag with 
	nulls instead of spaces.

	* info/info-utils.c (forward_to_info_syntax, scan_info_tag): 
	Look for tags starting with nulls instead of spaces.  This is 
	slightly faster because nodes generally contain many space 
	characters.
	(skip_tag_contents): New function.
	(scan_info_tag): Call it.
	* info/tag.c (tag_expand): Look for tag starting with a null 
	instead of a space.  Skip past the tag even if no handler for it 
	was found (for example, an index tag).

	* info/info-utils.c (printed_representation): Don't check for an 
	Info tag, as they should have been removed already.
	* info/window.c (info_tag): Function removed.

	* info/indices.c (info_indices_of_file_buffer): Look for nodes 
	with "index" in the name as well as "Index".

	* info/info-utils.c (forward_to_info_syntax): Don't search for 
	"\n* Menu:" label separately, as this is comprised under 
	searching for "\n* ".
	(scan_node_contents): Conditional reordered.

2014-10-21  Karl Berry  <karl@gnu.org>

	* tp/texi2any.pl (makeinfo_help),